# ludex-rust-sdk

./: Cargo.toml  README.md
.github/: build.yml
.github/workflows/: build.yml  rust-clippy.yml  test.yml
docs/: crates.js  help.html  index.html  search-index.js  settings.html  src-files.js
docs/ludex_rust_sdk/: all.html  index.html  sidebar-items.js  struct.ClientScoped.html  struct.OrganizationScoped.html
docs/ludex_rust_sdk/challenge/: index.html  sidebar-items.js  struct.CancelChallengeResponse.html  struct.Challenge.html  struct.ChallengeListResponse.html  struct.ChallengeResponse.html  struct.CreateChallengeRequest.html  struct.CreateChallengeResponse.html  struct.FungibleTokenPayout.html  struct.JoinChallengeRequest.html  struct.JoinChallengeResponse.html  struct.LeaveChallengeRequest.html  struct.LeaveChallengeResponse.html  struct.LockChallengeResponse.html  struct.MintResponse.html  struct.NftPlayer.html  struct.NonFungibleTokenPayout.html  struct.Offering.html  struct.PayoutResponse.html  struct.Pot.html  struct.ResolveChallengeRequest.html  struct.ResolveChallengeResponse.html  struct.ResolveChallengeWithOneWinnerRequest.html  struct.Signature.html  struct.UiValues.html  struct.WinningResponse.html
docs/ludex_rust_sdk/client/: index.html  sidebar-items.js  struct.Client.html  struct.ClientResponse.html  (+4 more)
src/: apiClient.rs  api_client.rs  challenge.rs  client.rs  lib.rs  main.rs  payout.rs  query_builder.rs  types.rs  vault.rs
tests/: integration_test_challenge.rs  integration_test_client.rs  integration_test_payout.rs  integration_test_vault.rs
(+34 files in other folders)
