[package]
name = "ludex-rust-sdk"
version = "0.1.0"
authors = ["allentsnag <allentsang04@gmail.com>"]
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"]}
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
